[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tema.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/PadNumerico.gd" type="Script" id=2]
[ext_resource path="res://GFX/Interface/PNG/metalPanel.png" type="Texture" id=3]
[ext_resource path="res://GFX/Interface/PNG/glassPanel.png" type="Texture" id=4]
[ext_resource path="res://GFX/Interface/PNG/dotRed.png" type="Texture" id=5]
[ext_resource path="res://SFX/threeTone1.ogg" type="AudioStream" id=6]

[node name="PadNumerico" type="Popup"]
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 400 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Fondo" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VSplitContainer" type="VSplitContainer" parent="."]
editor/display_folded = true
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 400 )

[node name="CenterContainer" type="CenterContainer" parent="VSplitContainer"]
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 70, 20 )

[node name="PantallaVidrio" type="NinePatchRect" parent="VSplitContainer/CenterContainer"]
margin_left = 50.0
margin_right = 250.0
margin_bottom = 100.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 0, 100 )
patch_margin_right = 200
patch_margin_bottom = 100

[node name="Pantalla" type="RichTextLabel" parent="VSplitContainer/CenterContainer"]
margin_left = 40.0
margin_right = 260.0
margin_bottom = 100.0
rect_min_size = Vector2( 220, 100 )
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
meta_underlined = false

[node name="BotonContenedor" type="CenterContainer" parent="VSplitContainer"]
editor/display_folded = true
margin_top = 112.0
margin_right = 300.0
margin_bottom = 400.0

[node name="GrillaBotones" type="GridContainer" parent="VSplitContainer/BotonContenedor"]
editor/display_folded = true
margin_left = 150.0
margin_top = 144.0
margin_right = 150.0
margin_bottom = 144.0
columns = 3

[node name="Button1" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_right = 37.0
margin_bottom = 41.0
text = "1"

[node name="Button2" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_left = 41.0
margin_right = 78.0
margin_bottom = 41.0
text = "2"

[node name="Button3" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_left = 82.0
margin_right = 144.0
margin_bottom = 41.0
text = "3"

[node name="Button4" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_top = 45.0
margin_right = 37.0
margin_bottom = 86.0
text = "4"

[node name="Button5" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_left = 41.0
margin_top = 45.0
margin_right = 78.0
margin_bottom = 86.0
text = "5"

[node name="Button6" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_left = 82.0
margin_top = 45.0
margin_right = 144.0
margin_bottom = 86.0
text = "6"

[node name="Button7" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_top = 90.0
margin_right = 37.0
margin_bottom = 131.0
text = "7"

[node name="Button8" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_left = 41.0
margin_top = 90.0
margin_right = 78.0
margin_bottom = 131.0
text = "8"

[node name="Button9" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_left = 82.0
margin_top = 90.0
margin_right = 144.0
margin_bottom = 131.0
text = "9"

[node name="Luz" type="TextureRect" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_top = 135.0
margin_right = 37.0
margin_bottom = 176.0
texture = ExtResource( 5 )
expand = true

[node name="Button0" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_left = 41.0
margin_top = 135.0
margin_right = 78.0
margin_bottom = 176.0
text = "0"

[node name="ButtonOK" type="Button" parent="VSplitContainer/BotonContenedor/GrillaBotones"]
margin_left = 82.0
margin_top = 135.0
margin_right = 144.0
margin_bottom = 176.0
text = "OK"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
